maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:33: error: not found: value yMax
  if (!hasTopWall(x,y) && y!= yMax && getIndication(x,y-1)==9999) {
                              ^